@@ -1,3 +1,7 @@
+Changelog v5.2.39 (2025-07-30):
+- Updated embed extractor
+- Updated database
+
 Changelog v5.2.38 (2025-07-29):
 - Fix Bug with Playlist
 - Added Mapping to Database
